Add Composer 2 support

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     },
     "require": {
-        "composer-plugin-api": "^1.0.0",
+        "composer-plugin-api": "^1.0 || ^2.0",
         "webflo/drupal-finder": "^1.0.0",
         "symfony/filesystem": "^2.5|^3|^4"
     }
